infrastructure-live-v1/staging/vpc/5-route.tf
resource "aws_route_table" "private" {
    vpc_id = aws_vpc.main.id

    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.main.id
    }

    tags = {
        Name = "staging-private"
    }
  
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.main.id
    }   

    tags = {
        Name = "staging-public"
    }
}    

resource "aws_route_table_association" "private_us_east_1a" {
    subnet_id = aws_subnet.private_us_east_1a.id
    route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private_us_east_1b" {
    subnet_id = aws_subnet.private_us_east_1b.id
    route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "public_us_east_1a" {
    subnet_id = aws_subnet.public_us_east_1a.id
    route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_us_east_1b" {
    subnet_id = aws_subnet.public_us_east_1b.id
    route_table_id = aws_route_table.public.id
}
